Feature #13271
Migrate Silverpeas Core Implementation Library to JakartaEE 10